--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,11 @@ p {
     color: #000;
 }
 
+p:hover{
+    color: var(--cs-primary);
+    text-decoration: underline;
+}
+
 h4 {
     font-size: 18px;
     font-weight: 600;
@@ -70,6 +75,9 @@ h6 {
     text-decoration: underline;
 }
 
+.c-10{
+    padding: 10px 0px;
+}
 /* global ends */
 
 /* header starts */
@@ -210,7 +218,9 @@ h6 {
     padding: 10px 0px;
 }
 
-.blog_post hr {}
+.blog_post hr {
+    margin: 5px 0px;
+}
 
 .post {
     display: flex;
@@ -280,3 +290,25 @@ h6 {
     border-radius: 10px;
     width: 50%;
 }
+
+.owl-carousel .owl-item img {
+    display: block;
+    width: 65%;
+    border-radius: 10px;
+    margin: auto;
+}
+
+.owl-dots{
+    display: none;
+}
+
+.fads{
+    text-align: center;
+}
+
+.fads img{
+    padding: 10px;
+}
+/* blogsection 1 ends */
+
+/* blogsection 2 starts */
